adicionado _blank no link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="https://www.youtube.com/watch?v=mqd7wQsHLZM">
+        <a href="https://www.youtube.com/watch?v=mqd7wQsHLZM" target="_blank">
             <!-- o href é pra onde será redericionado ao clicar no obj
             o parametro / é igual a raiz do site  -->
             <!-- tag a de ancora. transfora em clicavel -->
